--- a/index.html
+++ b/index.html
@@ -10,33 +10,32 @@
 html{scroll-behavior:smooth}
 
 body{
-  font-family:Segoe UI,Arial,sans-serif;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
   background:#000;
   color:#fff;
   overflow-x:hidden;
 }
 
-/* ===== BACKGROUND DESKTOP ===== */
-@media(min-width:769px){
-  body::before{
-    content:"";
-    position:fixed;
-    inset:0;
-    background:url('background.jpg') center/cover no-repeat;
-    z-index:-2;
-  }
+/* ===== BACKGROUND ===== */
+body::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  background:
+    radial-gradient(circle at 20% 20%,rgba(0,200,255,.25),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(120,80,255,.25),transparent 40%),
+    #000;
+  z-index:-2;
 }
-
-/* ===== OVERLAY ===== */
 body::after{
   content:"";
   position:fixed;
   inset:0;
-  background:linear-gradient(180deg,rgba(0,0,0,.55),rgba(0,0,0,.9));
+  background:linear-gradient(180deg,rgba(0,0,0,.4),rgba(0,0,0,.85));
   z-index:-1;
 }
 
-/* ===== HEADER (ARREGLADO) ===== */
+/* ===== HEADER ===== */
 header{
   position:fixed;
   top:0;
@@ -54,27 +53,26 @@ header{
 /* MENU */
 nav{
   display:flex;
-  gap:36px;
+  gap:32px;
 }
-
 nav a{
   color:#fff;
   text-decoration:none;
   font-weight:600;
-  opacity:.85;
+  opacity:.9;
 }
 nav a:hover{opacity:1}
 
-/* LANG */
+/* LANG SWITCH */
 .lang{
   position:absolute;
-  right:20px;
+  right:18px;
   display:flex;
-  gap:10px;
+  gap:8px;
 }
 .lang button{
   background:transparent;
-  border:1px solid rgba(255,255,255,.25);
+  border:1px solid rgba(255,255,255,.3);
   color:#fff;
   padding:6px 12px;
   border-radius:10px;
@@ -108,14 +106,14 @@ nav a:hover{opacity:1}
 }
 
 .hero h1{
-  font-size:clamp(42px,7vw,88px);
+  font-size:clamp(42px,8vw,88px);
   text-shadow:0 0 30px rgba(0,200,255,.6);
   transform:translateZ(60px);
 }
 
 .hero p{
   max-width:760px;
-  margin:24px auto;
+  margin:22px auto;
   font-size:20px;
   line-height:1.6;
   opacity:.95;
@@ -124,21 +122,40 @@ nav a:hover{opacity:1}
 
 /* LAPTOP */
 .laptop{
-  margin:40px auto 0;
+  margin:36px auto 0;
   max-width:520px;
   transform:translateZ(120px);
 }
 .laptop img{
   width:100%;
   border-radius:18px;
-  box-shadow:0 40px 80px rgba(0,0,0,.8);
+  box-shadow:0 40px 80px rgba(0,0,0,.85);
 }
 
-/* MOBILE */
+/* ===== MOBILE FIX ===== */
 @media(max-width:768px){
+
+  header{
+    height:auto;
+    padding:10px 0 14px;
+  }
+
+  nav{
+    gap:22px;
+    font-size:15px;
+  }
+
+  /* MOVE ES / EN DOWN */
+  .lang{
+    position:static;
+    margin-top:8px;
+    justify-content:center;
+  }
+
   .hero-inner{
     animation:floatMobile 6s ease-in-out infinite;
   }
+
   @keyframes floatMobile{
     0%,100%{transform:translateY(0)}
     50%{transform:translateY(-12px)}
@@ -156,6 +173,7 @@ nav a:hover{opacity:1}
     <a href="planes.html">Planes</a>
     <a href="nosotros.html">Nosotros</a>
   </nav>
+
   <div class="lang">
     <button onclick="setLang('es')">ES</button>
     <button onclick="setLang('en')">EN</button>
@@ -169,6 +187,7 @@ nav a:hover{opacity:1}
       Diseñamos experiencias web profesionales enfocadas en generar confianza,
       posicionar tu marca y convertir visitas en clientes reales.
     </p>
+
     <div class="laptop">
       <img src="background.jpg" alt="ZenSite Web">
     </div>
@@ -180,9 +199,9 @@ function setLang(lang){
   document.documentElement.lang = lang;
 }
 
-/* 3D FOLLOW MOUSE (DESKTOP) */
-const hero=document.querySelector(".hero-inner");
+/* DESKTOP 3D FOLLOW */
 if(window.innerWidth>768){
+  const hero=document.querySelector(".hero-inner");
   document.addEventListener("mousemove",e=>{
     const x=(window.innerWidth/2-e.clientX)/40;
     const y=(window.innerHeight/2-e.clientY)/40;
