--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite | Webs que venden</title>
+<title>ZenSite</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
-
 body{
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
   background:#000;
@@ -16,7 +14,7 @@ body{
   overflow-x:hidden;
 }
 
-/* ===== BACKGROUND ===== */
+/* BACKGROUND */
 body::before{
   content:"";
   position:fixed;
@@ -31,11 +29,11 @@ body::after{
   content:"";
   position:fixed;
   inset:0;
-  background:linear-gradient(180deg,rgba(0,0,0,.4),rgba(0,0,0,.85));
+  background:linear-gradient(180deg,rgba(0,0,0,.4),rgba(0,0,0,.9));
   z-index:-1;
 }
 
-/* ===== HEADER ===== */
+/* HEADER */
 header{
   position:fixed;
   top:0;
@@ -53,7 +51,7 @@ header{
 /* MENU */
 nav{
   display:flex;
-  gap:32px;
+  gap:28px;
 }
 nav a{
   color:#fff;
@@ -61,29 +59,28 @@ nav a{
   font-weight:600;
   opacity:.9;
 }
-nav a:hover{opacity:1}
 
 /* LANG SWITCH */
 .lang{
   position:absolute;
-  right:18px;
+  right:8px; /* MÁS A LA DERECHA */
   display:flex;
   gap:8px;
 }
 .lang button{
   background:transparent;
-  border:1px solid rgba(255,255,255,.3);
+  border:1px solid rgba(255,255,255,.35);
   color:#fff;
   padding:6px 12px;
-  border-radius:10px;
+  border-radius:12px;
   font-weight:600;
   cursor:pointer;
 }
-.lang button:hover{
-  background:rgba(255,255,255,.15);
+.lang button.active{
+  background:rgba(255,255,255,.18);
 }
 
-/* ===== HERO ===== */
+/* HERO */
 .hero{
   min-height:100vh;
   display:flex;
@@ -93,38 +90,31 @@ nav a:hover{opacity:1}
   padding:120px 20px 40px;
   perspective:1200px;
 }
-
 .hero-inner{
   transform-style:preserve-3d;
   animation:float3d 8s ease-in-out infinite;
 }
-
 @keyframes float3d{
-  0%{transform:rotateX(0) rotateY(0) translateY(0)}
-  50%{transform:rotateX(6deg) rotateY(-6deg) translateY(-18px)}
-  100%{transform:rotateX(0) rotateY(0) translateY(0)}
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-18px)}
 }
 
 .hero h1{
-  font-size:clamp(42px,8vw,88px);
+  font-size:clamp(44px,9vw,92px);
   text-shadow:0 0 30px rgba(0,200,255,.6);
-  transform:translateZ(60px);
 }
-
 .hero p{
   max-width:760px;
   margin:22px auto;
   font-size:20px;
   line-height:1.6;
   opacity:.95;
-  transform:translateZ(40px);
 }
 
-/* LAPTOP */
+/* IMAGE */
 .laptop{
   margin:36px auto 0;
   max-width:520px;
-  transform:translateZ(120px);
 }
 .laptop img{
   width:100%;
@@ -132,34 +122,10 @@ nav a:hover{opacity:1}
   box-shadow:0 40px 80px rgba(0,0,0,.85);
 }
 
-/* ===== MOBILE FIX ===== */
+/* MOBILE */
 @media(max-width:768px){
-
-  header{
-    height:auto;
-    padding:10px 0 14px;
-  }
-
-  nav{
-    gap:22px;
-    font-size:15px;
-  }
-
-  /* MOVE ES / EN DOWN */
-  .lang{
-    position:static;
-    margin-top:8px;
-    justify-content:center;
-  }
-
-  .hero-inner{
-    animation:floatMobile 6s ease-in-out infinite;
-  }
-
-  @keyframes floatMobile{
-    0%,100%{transform:translateY(0)}
-    50%{transform:translateY(-12px)}
-  }
+  nav{gap:20px;font-size:15px}
+  .lang{right:6px;top:10px}
 }
 </style>
 </head>
@@ -168,22 +134,22 @@ nav a:hover{opacity:1}
 
 <header>
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="demo.html">Demos</a>
-    <a href="planes.html">Planes</a>
-    <a href="nosotros.html">Nosotros</a>
+    <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
+    <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
+    <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
+    <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
   </nav>
 
   <div class="lang">
-    <button onclick="setLang('es')">ES</button>
-    <button onclick="setLang('en')">EN</button>
+    <button id="btnES" class="active" onclick="setLang('es')">ES</button>
+    <button id="btnEN" onclick="setLang('en')">EN</button>
   </div>
 </header>
 
 <section class="hero">
   <div class="hero-inner">
-    <h1>ZenSite</h1>
-    <p>
+    <h1 id="title">ZenSite</h1>
+    <p id="desc">
       Diseñamos experiencias web profesionales enfocadas en generar confianza,
       posicionar tu marca y convertir visitas en clientes reales.
     </p>
@@ -195,18 +161,26 @@ nav a:hover{opacity:1}
 </section>
 
 <script>
-function setLang(lang){
-  document.documentElement.lang = lang;
-}
+const texts={
+  es:{
+    desc:"Diseñamos experiencias web profesionales enfocadas en generar confianza, posicionar tu marca y convertir visitas en clientes reales."
+  },
+  en:{
+    desc:"We design professional web experiences focused on building trust, positioning your brand and converting visitors into real clients."
+  }
+};
 
-/* DESKTOP 3D FOLLOW */
-if(window.innerWidth>768){
-  const hero=document.querySelector(".hero-inner");
-  document.addEventListener("mousemove",e=>{
-    const x=(window.innerWidth/2-e.clientX)/40;
-    const y=(window.innerHeight/2-e.clientY)/40;
-    hero.style.transform=`rotateY(${x}deg) rotateX(${y}deg)`;
+function setLang(lang){
+  document.documentElement.lang=lang;
+
+  document.getElementById("desc").innerText=texts[lang].desc;
+
+  document.querySelectorAll("nav a").forEach(a=>{
+    a.textContent=a.dataset[lang];
   });
+
+  document.getElementById("btnES").classList.toggle("active",lang==="es");
+  document.getElementById("btnEN").classList.toggle("active",lang==="en");
 }
 </script>
 
