--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 *{margin:0;padding:0;box-sizing:border-box}
 body{
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-  background:#000;
+  background:#05070c;
   color:#fff;
-  overflow-x:hidden;
 }
 
 /* BACKGROUND */
@@ -20,16 +19,16 @@ body::before{
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 20% 20%,rgba(0,200,255,.25),transparent 40%),
-    radial-gradient(circle at 80% 70%,rgba(120,80,255,.25),transparent 40%),
-    #000;
+    radial-gradient(circle at 20% 25%,rgba(0,200,255,.18),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(140,90,255,.18),transparent 40%),
+    #05070c;
   z-index:-2;
 }
 body::after{
   content:"";
   position:fixed;
   inset:0;
-  background:linear-gradient(180deg,rgba(0,0,0,.4),rgba(0,0,0,.9));
+  backdrop-filter:blur(90px);
   z-index:-1;
 }
 
@@ -39,93 +38,82 @@ header{
   top:0;
   width:100%;
   height:64px;
-  display:flex;
+  display:grid;
+  grid-template-columns:1fr auto 1fr;
   align-items:center;
-  justify-content:center;
-  background:rgba(0,0,0,.65);
-  backdrop-filter:blur(18px);
+  padding:0 20px;
+  background:rgba(255,255,255,.04);
+  backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
-  z-index:3000;
+  z-index:1000;
 }
 
-/* MENU */
-nav{
+/* MENU CENTER */
+.nav-center{
   display:flex;
-  gap:28px;
+  gap:26px;
 }
-nav a{
+.nav-center a{
   color:#fff;
   text-decoration:none;
   font-weight:600;
-  opacity:.9;
+  opacity:.85;
 }
+.nav-center a:hover{opacity:1}
 
-/* LANG SWITCH */
+/* LANG SWITCH RIGHT */
 .lang{
-  position:absolute;
-  right:8px; /* MÁS A LA DERECHA */
+  justify-self:end;
   display:flex;
-  gap:8px;
+  gap:10px;
 }
 .lang button{
-  background:transparent;
-  border:1px solid rgba(255,255,255,.35);
+  background:rgba(255,255,255,.08);
+  border:1px solid rgba(255,255,255,.25);
   color:#fff;
-  padding:6px 12px;
-  border-radius:12px;
+  padding:6px 14px;
+  border-radius:14px;
   font-weight:600;
   cursor:pointer;
 }
 .lang button.active{
-  background:rgba(255,255,255,.18);
+  background:#00cfff;
+  color:#000;
 }
 
 /* HERO */
-.hero{
+main{
   min-height:100vh;
+  padding-top:120px;
   display:flex;
+  flex-direction:column;
   align-items:center;
-  justify-content:center;
   text-align:center;
-  padding:120px 20px 40px;
-  perspective:1200px;
-}
-.hero-inner{
-  transform-style:preserve-3d;
-  animation:float3d 8s ease-in-out infinite;
-}
-@keyframes float3d{
-  0%,100%{transform:translateY(0)}
-  50%{transform:translateY(-18px)}
 }
 
-.hero h1{
-  font-size:clamp(44px,9vw,92px);
-  text-shadow:0 0 30px rgba(0,200,255,.6);
+h1{
+  font-size:42px;
+  margin-bottom:18px;
 }
-.hero p{
-  max-width:760px;
-  margin:22px auto;
-  font-size:20px;
+p{
+  max-width:720px;
+  font-size:18px;
   line-height:1.6;
-  opacity:.95;
+  opacity:.9;
 }
 
-/* IMAGE */
-.laptop{
-  margin:36px auto 0;
-  max-width:520px;
-}
-.laptop img{
-  width:100%;
-  border-radius:18px;
-  box-shadow:0 40px 80px rgba(0,0,0,.85);
+/* HERO IMAGE */
+.hero-img{
+  margin-top:50px;
+  width:90%;
+  max-width:700px;
+  opacity:.85;
 }
 
 /* MOBILE */
 @media(max-width:768px){
-  nav{gap:20px;font-size:15px}
-  .lang{right:6px;top:10px}
+  h1{font-size:34px}
+  .nav-center{gap:18px}
 }
 </style>
 </head>
@@ -133,7 +121,9 @@ nav a{
 <body>
 
 <header>
-  <nav>
+  <div></div>
+
+  <nav class="nav-center">
     <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
     <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
     <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
@@ -141,47 +131,46 @@ nav a{
   </nav>
 
   <div class="lang">
-    <button id="btnES" class="active" onclick="setLang('es')">ES</button>
-    <button id="btnEN" onclick="setLang('en')">EN</button>
+    <button id="esBtn" class="active">ES</button>
+    <button id="enBtn">EN</button>
   </div>
 </header>
 
-<section class="hero">
-  <div class="hero-inner">
-    <h1 id="title">ZenSite</h1>
-    <p id="desc">
-      Diseñamos experiencias web profesionales enfocadas en generar confianza,
-      posicionar tu marca y convertir visitas en clientes reales.
-    </p>
+<main>
+  <h1 id="title">ZenSite</h1>
+  <p id="desc">
+    Diseñamos experiencias web profesionales enfocadas en generar confianza,
+    posicionar tu marca y convertir visitas en clientes reales.
+  </p>
 
-    <div class="laptop">
-      <img src="background.jpg" alt="ZenSite Web">
-    </div>
-  </div>
-</section>
+  <img src="background.jpg" class="hero-img" alt="ZenSite demo">
+</main>
 
 <script>
-const texts={
-  es:{
-    desc:"Diseñamos experiencias web profesionales enfocadas en generar confianza, posicionar tu marca y convertir visitas en clientes reales."
-  },
-  en:{
-    desc:"We design professional web experiences focused on building trust, positioning your brand and converting visitors into real clients."
-  }
-};
+const esBtn=document.getElementById("esBtn");
+const enBtn=document.getElementById("enBtn");
+const title=document.getElementById("title");
+const desc=document.getElementById("desc");
+const links=document.querySelectorAll("[data-es]");
 
 function setLang(lang){
-  document.documentElement.lang=lang;
-
-  document.getElementById("desc").innerText=texts[lang].desc;
-
-  document.querySelectorAll("nav a").forEach(a=>{
-    a.textContent=a.dataset[lang];
-  });
-
-  document.getElementById("btnES").classList.toggle("active",lang==="es");
-  document.getElementById("btnEN").classList.toggle("active",lang==="en");
+  if(lang==="es"){
+    title.innerText="ZenSite";
+    desc.innerText="Diseñamos experiencias web profesionales enfocadas en generar confianza, posicionar tu marca y convertir visitas en clientes reales.";
+    links.forEach(l=>l.innerText=l.dataset.es);
+    esBtn.classList.add("active");
+    enBtn.classList.remove("active");
+  }else{
+    title.innerText="ZenSite";
+    desc.innerText="We design professional web experiences focused on building trust, positioning your brand, and converting visitors into real clients.";
+    links.forEach(l=>l.innerText=l.dataset.en);
+    enBtn.classList.add("active");
+    esBtn.classList.remove("active");
+  }
 }
+
+esBtn.onclick=()=>setLang("es");
+enBtn.onclick=()=>setLang("en");
 </script>
 
 </body>
